Remove nowrap on effective-radios to fix mobile > 100% width with long checkboxes like agreements

--- a/app/assets/stylesheets/effective_radio/input.scss
+++ b/app/assets/stylesheets/effective_radio/input.scss
@@ -3,10 +3,6 @@ div.btn-group > .btn.first-button {
   border-bottom-left-radius: 0.25rem;
 }
 
-.effective-radios {
-  white-space: nowrap;
-}
-
 .effective-radios.is-valid {
   label { border-color: #28a745; }
   .valid-feedback { display: block; }
